--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-server.port=8080
+server.port=${PORT:8080}
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
